# example_backend

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 03b412e71519_add_unique_constr_token.py  8dbb17d4938c_add_on_update_into_blog_table.py  bb86ee386308_initial_tables.py
src/api/: depends.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: blogs.py  users.py
src/core/: secure.py  settings.py
src/crud/: database.py
src/crud/models/: __init__.py  base.py  blog.py  user.py
src/crud/repo/: base.py  statistics.py
src/exceptions/: base.py  crud.py
src/schemas/: blog.py  user.py
